# barcode-bible

./: .gitignore  Cargo.toml  LICENSE  example.toml  go.mod  go.sum  main.go
src/: code.rs  main.rs  product.rs
